Snapping control points are not taken into account during Scaling/Rotating #29153

Closed
opened 2011-11-04 08:02:20 +01:00 by Pep · 10 comments

%%%When "Snap during transform" is on, while performing the translation, the control poins (added with hotkey A) are taken into account. However, when rotating or scaling its effect is null. This applies only to vertex, edge, face and volume snapping.

However, I'm not sure if this is a bug, or a logic consequence of the type of operation. But then, I think control points shouldn't be allowed?

Regards.

Pep.
%%%

%%%When "Snap during transform" is on, while performing the translation, the control poins (added with hotkey A) are taken into account. However, when rotating or scaling its effect is null. This applies only to vertex, edge, face and volume snapping. However, I'm not sure if this is a bug, or a logic consequence of the type of operation. But then, I think control points shouldn't be allowed? Regards. Pep. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Hi! I tried to test this but it seams to work ok even when using rotation/scaling. Rotation snap is 5 degrees.%%%

%%%Hi! I tried to test this but it seams to work ok even when using rotation/scaling. Rotation snap is 5 degrees.%%%
Author

%%%You mean snapping at increments. What I meant was snapping in any other mode, and using the control points added with hotkey A, during transform.%%%

%%%You mean snapping at increments. What I meant was snapping in any other mode, and using the control points added with hotkey A, during transform.%%%

%%%ubuntu 11.04 rev41611

It works, here.%%%

%%%ubuntu 11.04 rev41611 It works, here.%%%

%%%Well, it seems to work in edit mode/object mode for most of cases.

Only one problem, here. Scaling in object mode with A control points scales object to inf values. %%%

%%%Well, it seems to work in edit mode/object mode for most of cases. Only one problem, here. Scaling in object mode with A control points scales object to inf values. %%%
Author

%%%It works ok when you place a single snap point. However, the effect in grab mode is that it snaps to the median point of those snap points, and you can "weight" them by duplicating snap points in a particular vertex for instance. In scale/rotate mode it looks like this behaviour is not applied. It looks like it snaps to the LAST snapping point you insert.
%%%

%%%It works ok when you place a single snap point. However, the effect in grab mode is that it snaps to the median point of those snap points, and you can "weight" them by duplicating snap points in a particular vertex for instance. In scale/rotate mode it looks like this behaviour is not applied. It looks like it snaps to the LAST snapping point you insert. %%%
Member

%%%Will add to the transform todo list, we need a new developer to adopt the code.%%%

%%%Will add to the transform todo list, we need a new developer to adopt the code.%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

This issue was referenced by 8573c1a847

This issue was referenced by 8573c1a84728546e949ced6e6f198afd16ac4dc4

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29153
No description provided.